postbuild script add

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "install-server": "npm install",
     "install-client": "cd client && npm install",
     "install-all": "concurrently --n 'install-server,install-client' --c 'yellow,blue' \"npm run install-server\" \"npm run install-client\" ",
-    "dev": "concurrently --n 'server,client' --c 'yellow,blue' \"npm run server\" \"npm run client\" "
+    "dev": "concurrently --n 'server,client' --c 'yellow,blue' \"npm run server\" \"npm run client\" ",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
