--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "client-install": "npm install --prefix client",
     "server": "nodemon index.js",
-    "client": "cd client && npm start",
-    "install-server": "npm install",
-    "install-client": "cd client && npm install",
-    "install-all": "concurrently --n 'install-server,install-client' --c 'yellow,blue' \"npm run install-server\" \"npm run install-client\" ",
-    "dev": "concurrently --n 'server,client' --c 'yellow,blue' \"npm run server\" \"npm run client\" ",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "node index.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
